--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,14 @@
         android:theme="@style/Theme.BUBTNexus"
         tools:targetApi="31">
         <activity
-            android:name=".NoticeActivity"
+            android:name=".TaskActivity"
             android:exported="false" />
-        <!-- Login Activity (Launcher) -->
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NoticeActivity"
+            android:exported="false" /> <!-- Login Activity (Launcher) -->
         <activity
             android:name=".LoginActivity"
             android:exported="true">
