--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -16,28 +18,10 @@
         android:theme="@style/Theme.BUBTNexus"
         tools:targetApi="31">
         <activity
-            android:name=".RideRequestActivity"
-            android:exported="false" />
-        <activity
-            android:name=".RideMapActivity"
-            android:exported="false" />
-        <activity
-            android:name=".RideChatActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MyRideActivity"
-            android:exported="false" />
-        <activity
             android:name=".RideDetailsActivity"
             android:exported="false" />
         <activity
-            android:name=".FindRideActivity"
-            android:exported="false" />
-        <activity
-            android:name=".utils.FindRideActivity"
-            android:exported="false" />
-        <activity
-            android:name=".CreateRideActivity"
+            android:name=".RideSharingActivity"
             android:exported="false" />
         <activity
             android:name=".AssignmentActivity"
