--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     // Location services
     implementation 'com.google.android.gms:play-services-location:21.0.1'
 
+    // For permissions
+    implementation 'com.karumi:dexter:6.2.3'
+
     // Networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
